# blackbird

./: .gitignore  CMakeLists.txt  Makefile
cmake/: FindJansson.cmake  FindMySQL.cmake
src/: bitcoin.cpp  bitcoin.h  check_entry_exit.cpp  check_entry_exit.h  curl_fun.cpp  curl_fun.h  db_fun.cpp  db_fun.h  main.cpp  parameters.cpp  parameters.h  result.cpp  result.h  time_fun.cpp
src/exchange/: bitfinex.cpp  bitfinex.h  bitstamp.cpp  bitstamp.h  btce.cpp  btce.h  gemini.cpp  gemini.h  itbit.cpp  itbit.h  kraken.cpp  okcoin.cpp  okcoin.h  poloniex.cpp  poloniex.h
src/utils/: base64.cpp  base64.h  send_email.cpp  send_email.h
